[tool.poetry]
name = "lo0py"
version = "0.1.0"
description = ""
authors = ["jonathan lung <lungj@matterloom.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.0"
types-paramiko = "^3.3.0.0"
requests = "^2.31.0"
types-requests = "^2.31.0.2"
asyncssh = "^2.13.2"
bcrypt = "^4.0.1"
cryptography = "^41.0.3"
asyncinotify = "^4.0.5"
aiofiles = "^23.2.1"
types-aiofiles = "^23.2.0.20240106"


[tool.poetry.group.dev.dependencies]
yamllint = "^1.32.0"
mypy = "^1.6.0"
black = "^23.9.1"
ruff = "^0.0.292"
bandit = "^1.7.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
